Stop limiting the height of code so much.
This allows it to get too big, but it's better than cutting it off.

--- a/css/_adobe-reveal-theme-base.scss
+++ b/css/_adobe-reveal-theme-base.scss
@@ -125,6 +125,11 @@ $mainFontWeight: 300;
 
     pre {
       margin: $blockMargin auto;
+
+      code {
+        max-height: 100%;
+        overflow: scroll;
+      }
     }
 
     table th {
